--- a/package.json
+++ b/package.json
@@ -2,12 +2,40 @@
 	"name": "balade_bourg_palette",
 	"version": "2.0.0",
 	"private": true,
+	"homepage": "./",
+	"author": "Yannick COUSIN",
+	"main": "public/electron.js",
+	"build": {
+		"appId": "com.projectgrid",
+		"productName": "Balade à Bourg-Palette",
+		"files": [
+			"build/**/*",
+			"node_modules/**/*"
+		],
+		"directories": {
+			"buildResources": "public"
+		},
+		"mac": {
+			"target": "dmg",
+			"icon": "build/app.png"
+		},
+		"win": {
+			"target": "nsis",
+			"icon": "build/app.png"
+		},
+		"linux": {
+			"target": "deb"
+		}
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.25.0",
+		"concurrently": "^7.1.0",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.0",
+		"electron-is-dev": "^2.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "^5.0.0",
@@ -17,7 +45,15 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"react-start": "SET BROWSER=none && react-scripts start",
+		"release": "react-scripts build && electron-builder --publish=never",
+		"start-electron": "concurrently \"SET BROWSER=none && npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
+		"electron:start": "concurrently -k \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electronmon .\"",
+		"electron:package:mac": "yarn build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+		"electron:package:win": "yarn build && electron-builder -w -c.extraMetadata.main=build/electron.js",
+		"electron:package:linux": "yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js",
+		"electron:test": "yarn electron-builder -m -c.extraMetadata.main=build/electron.js"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -36,5 +72,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"electron": "^18.0.2",
+		"electron-builder": "^23.0.3"
 	}
 }
